--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Search Box</title>
 </head>
 <body>
-    <input type="text">
-    <button class="clrBtn">Clear</button>
-    <ul></ul>
-
-
-    <script src="script.js"></script>
+    <div class="container text-center">
+        <div class="row">
+            <div class="postPart">
+                <h1 class="title">Search Box</h1>
+                <div class="mb-3">
+                    <input type="text" id="searchInput" placeholder="search..." />
+                    <button class="clrBtn">Clear</button>
+                </div>
+                <ul></ul>
+            </div>
+        </div>
+    </div>
+    <script src="./js/script.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
